<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">

    <TextView
			android:id="@+id/title_add_by_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:padding="@dimen/margin_large"
			android:text="Add Contact By Email"
      android:textSize="@dimen/text_size_large"
			android:textColor="?attr/textTitleColor"/>

		<TextView
			android:id="@+id/title_email_to_add"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/textView"
			android:layout_alignStart="@+id/textView"
			android:layout_below="@+id/title_add_by_email"
			android:padding="@dimen/margin_large"
			android:text="Enter the email address to add:"
      android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/email_to_add_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title_email_to_add"
			android:layout_centerHorizontal="true"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/edit_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionDone"
				android:inputType="textEmailAddress"
				android:maxLines="1"/>
			<requestFocus/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btn_add_by_email"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/email_to_add_layout"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="Add Contact"/>
	</RelativeLayout>

</ScrollView>