<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/scrollView"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
...
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/continue_button"/>

		<Button
			android:id="@+id/addByEmailButton"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/add_by_email_button"/>
...
